# hyperspy

./: .coveragerc  .drone.yml  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  2940.bugfix.rst  3379.bugfix.rst  AUTHORS.txt  BUGs.txt  CHANGES.rst  CHANGES.txt  COPYING.txt  INSTALL.txt  MANIFEST.in  NSIS_installer_script.nsi  NSIS_installer_script64.nsi  README.md  README.rst  README.txt  Release.py  TEMPimpulseImportTestscript.ipynb  TODO.txt  __init__.py  aarholt test.rtf  anaconda_hyperspy_environment.yml  appveyor.yml  azure-pipelines.yml  component.py  conda_environment.yml  conda_environment_dev.yml  eelslab.py  io.py  model.py  pepstorm.bat  pip-req.txt  prepare_release.py  (+16 more)
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: build.yml  doc.yml  docs.yml  nightly-merge.yml  nightly-merge_non_uniform.yml  package_and_test.yml  release.yml  tests.yml  tests_extension.yml
.ipynb_checkpoints/: TEMPimpulseImportTestscript-checkpoint.ipynb
_components/: doniach.py  eels_arctan.py  eels_vignetting.py  exponential.py  expression.py  gaussian.py  lorentzian.py  pes_voigt.py  polynomial.py  skew_normal.py
_signals/: complex_signal1d.py  eds_tem.py  signal1d.py  signal2d.py
ci/: travis_install_with_conda.sh  travis_install_with_pip.sh  travis_setup_conda_linux.sh  travis_setup_conda_osx.sh
continuous_integration/: NSIS_installer_script.nsi  hspytest.py  nosetest.py  pytest.py  windeploy.py
continuous_integration/NSISPlugins/: NSIS_06_uninstaller.nsi  hspy_delete06_32.nsh  hspy_delete06_64.nsh
demos/: 3D_image.py  4D_image.py  spectrum_image.py
doc/: Makefile  README.txt  citing.rst  community.rst  conf.py  conftest.py  credits.rst  dev_guide.rst  generate_api_doc.sh  gh-pages.py  governance.md  help.rst  index.rst  intro.rst  make.bat  readthedocs.yml  requirements.txt  version_links.json
doc/_static/: articles_using_hyperspy.bib  articles_using_hyperspy.html  custom-styles.css  importRPL.s  switcher.json
doc/_templates/: layout.html
doc/api/: hyperspy._components.rst  hyperspy._signals.rst  hyperspy.components.rst  hyperspy.datasets.rst  hyperspy.docstrings.rst  hyperspy.drawing._markers.rst  hyperspy.drawing._widgets.rst  hyperspy.drawing.rst  hyperspy.external.astroML.rst  hyperspy.external.mpfit.rst  hyperspy.external.mpfit.tests.rst  hyperspy.external.rst  (+36 more)
docs/: Makefile  README.txt  conf.py  credits.rst  generate_api_doc.sh  gh-pages.py  hspy_examples  index.rst  io.rst  make.bat  tutorial.rst
docstrings/: __init__.py
drawing/: figure.py  image.py  signal1d.py  utils.py  widgets.py
eelslab/: EELSlab.py  Release.py  __init__.py  axes.py  component.py  config_dir.py  controllers.py  coordinates.py  defaults_parser.py  edges_db.py  estimators.py  experiments.py  file_io.py  image.py  io.py  messages.py  microscope.py  model.py  optimizers.py  peak_char.py  progressbar.py  setup.py  signal.py  spectrum.py  utils.py  utils_readfile.py  utils_varia.py  xml_parser.py
examples/: 3D_image.py  4D_image.py  README.rst  line_spectrum.py  spectrum_image.py
exspy/: CHANGES.rst  CONTRIBUTING.rst  setup.py
holospy/: hyperspy_extension.yaml  setup.cfg  setup.py
hyperspy/: .goutputstream-NIOY7W  .signal.py.swp  Release.py  __init__.py  _lazy_signals.py  api.py  api_nogui.py  axes.py  component.py  components.py  components1d.py  components2D.py  components2d.py  conftest.py  decorators.py  defaults_parser.py  estimators.py  events.py  exceptions.py  experiments.py  extensions.py  hspy.py  hyperspy_extension.yaml  hyperspy_extensions.yaml  interactive.py  io.py  lazy_imports.py  logger.py  ma.py  messages.py  model.py  optimizers.py  peak_char.py  roi.py  rois_manager.py  samfire.py  setup.py  signal.py  signal_base.py  signal_tools.py  (+3 more)
hyperspy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
io_plugins/: bruker.py  emd.py  jeol.py  tiff.py  unbcf_fast.cp39-win_amd64.pyd
ipython_profile/: ipy_profile_eelslab.py
learn/: mlpca.py  mva.py
lib/: EELSlab.py  Release.py  __init__.py  axes.py  component.py  config_dir.py  controllers.py  coordinates.py  custom_exceptions.py  custom_readfile.py  custom_utils.py  defaults_parser.py  edges_db.py  effectiveangle.py  estimators.py  exceptions.py  experiments.py  file_io.py  image.py  interactive_ns.py  microscope.py  mlpca.py  model.py  model_controls.py  mpl_hse.py  mva.py  new_coordinates.py  new_plot.py  optimizers.py  painter.py  peak_char.py  signal.py  snica_b.py  spectrum.py  utils.py  utils_readfile.py  utils_varia.py  widgets.py
misc/: date_time_tools.py  export_dictionary.py  tv_denoise.py  utils.py
models/: model1d.py  model2d.py
rosettasciio/: .gitignore  MANIFEST.in  setup.py
rosettascio/: README.md  setup.py
samfire_utils/: global_strategies.py  strategy.py
spectrospy/: setup.py
src/: Release.py  component.py  config_dir.py  coordinates.py  defaults_parser.py  effectiveangle.py  estimators.py  file_io.py  image.py  microscope.py  mva.py  painter.py  spectrum.py  xml_parser.py
test/: Albite5.msa  bare_core.hdf5  core_shell.hdf5  edsf.hdf5
tests/: test_extension_registry.py
upcoming_changes/: 1412.new.rst  1791.new.rst  2183.new.rst  2341.enhancements.rst  2386.new.rst  2399.new.rst  2422.new.rst  2488.new.rst  2494.enhancements.rst  2559.enhancements.rst  2568.enhancements.rst  2590.enhancements.rst  2599.new.rst  2633.enhancements.rst  2652.api.rst  2670.new.rst  2688.new.rst  2703.enhancements.rst  2709.enhancements.rst  2709.improvement.rst  2711.enhancements.rst  2713.maintenance.rst  2714.maintenance.rst  2717.maintenance.rst  2720.bugfix.rst  2722.maintenance.rst  2724.enhancements.rst  2725.enhancements.rst  2729.bugfix.rst  2734.bugfix.rst  2748.bugfix.rst  2750.enhancements.rst  2756.enhancements.rst  2757.enhancements.rst  2758.maintenance.rst  2759.maintenance.rst  2760.bugfix.rst  2762.maintenance.rst  2763.bugfix.rst  2764.enhancements.rst  (+236 more)
utils/: markers.py  parallel_pool.py
(+2236 files in other folders)
